--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 12
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
 
   publish-gpr:
     needs: build
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
