--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -27,6 +27,9 @@ jobs:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
       - run: yarn install --frozen-lockfile
-      - run: npm publish
+      # - run: npm publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
