--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/mvlchain/prettier-config/issues"
   },
-  "homepage": "https://github.com/mvlchain/prettier-config#readme",
-  "publishConfig": {
-    "@mvlchain:registry": "https://npm.pkg.github.com"
-  }
+  "homepage": "https://github.com/mvlchain/prettier-config#readme"
 }
